# teeworlds

./: CMakeLists.txt
data/editor/: entities.xcf
src/game/: gamecore.h
src/game/client/: gameclient.cpp  gameclient.h
src/game/client/components/: ai.cpp  ai.h  binds.cpp  maplayers.cpp
