# this file is here to make clion happy

cmake_minimum_required(VERSION 3.1)
project(weetorlds)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    other/freetype/include/freetype/config/ftconfig.h
    other/freetype/include/freetype/config/ftheader.h
    other/freetype/include/freetype/config/ftmodule.h
    other/freetype/include/freetype/config/ftoption.h
    other/freetype/include/freetype/config/ftstdlib.h
    other/freetype/include/freetype/internal/services/svbdf.h
    other/freetype/include/freetype/internal/services/svcid.h
    other/freetype/include/freetype/internal/services/svgldict.h
    other/freetype/include/freetype/internal/services/svgxval.h
    other/freetype/include/freetype/internal/services/svkern.h
    other/freetype/include/freetype/internal/services/svmm.h
    other/freetype/include/freetype/internal/services/svotval.h
    other/freetype/include/freetype/internal/services/svpfr.h
    other/freetype/include/freetype/internal/services/svpostnm.h
    other/freetype/include/freetype/internal/services/svpscmap.h
    other/freetype/include/freetype/internal/services/svpsinfo.h
    other/freetype/include/freetype/internal/services/svsfnt.h
    other/freetype/include/freetype/internal/services/svttcmap.h
    other/freetype/include/freetype/internal/services/svtteng.h
    other/freetype/include/freetype/internal/services/svttglyf.h
    other/freetype/include/freetype/internal/services/svwinfnt.h
    other/freetype/include/freetype/internal/services/svxf86nm.h
    other/freetype/include/freetype/internal/autohint.h
    other/freetype/include/freetype/internal/ftcalc.h
    other/freetype/include/freetype/internal/ftdebug.h
    other/freetype/include/freetype/internal/ftdriver.h
    other/freetype/include/freetype/internal/ftgloadr.h
    other/freetype/include/freetype/internal/ftmemory.h
    other/freetype/include/freetype/internal/ftobjs.h
    other/freetype/include/freetype/internal/ftpic.h
    other/freetype/include/freetype/internal/ftrfork.h
    other/freetype/include/freetype/internal/ftserv.h
    other/freetype/include/freetype/internal/ftstream.h
    other/freetype/include/freetype/internal/fttrace.h
    other/freetype/include/freetype/internal/ftvalid.h
    other/freetype/include/freetype/internal/internal.h
    other/freetype/include/freetype/internal/psaux.h
    other/freetype/include/freetype/internal/pshints.h
    other/freetype/include/freetype/internal/sfnt.h
    other/freetype/include/freetype/internal/t1types.h
    other/freetype/include/freetype/internal/tttypes.h
    other/freetype/include/freetype/freetype.h
    other/freetype/include/freetype/ftadvanc.h
    other/freetype/include/freetype/ftbbox.h
    other/freetype/include/freetype/ftbdf.h
    other/freetype/include/freetype/ftbitmap.h
    other/freetype/include/freetype/ftbzip2.h
    other/freetype/include/freetype/ftcache.h
    other/freetype/include/freetype/ftchapters.h
    other/freetype/include/freetype/ftcid.h
    other/freetype/include/freetype/fterrdef.h
    other/freetype/include/freetype/fterrors.h
    other/freetype/include/freetype/ftgasp.h
    other/freetype/include/freetype/ftglyph.h
    other/freetype/include/freetype/ftgxval.h
    other/freetype/include/freetype/ftgzip.h
    other/freetype/include/freetype/ftimage.h
    other/freetype/include/freetype/ftincrem.h
    other/freetype/include/freetype/ftlcdfil.h
    other/freetype/include/freetype/ftlist.h
    other/freetype/include/freetype/ftlzw.h
    other/freetype/include/freetype/ftmac.h
    other/freetype/include/freetype/ftmm.h
    other/freetype/include/freetype/ftmodapi.h
    other/freetype/include/freetype/ftmoderr.h
    other/freetype/include/freetype/ftotval.h
    other/freetype/include/freetype/ftoutln.h
    other/freetype/include/freetype/ftpfr.h
    other/freetype/include/freetype/ftrender.h
    other/freetype/include/freetype/ftsizes.h
    other/freetype/include/freetype/ftsnames.h
    other/freetype/include/freetype/ftstroke.h
    other/freetype/include/freetype/ftsynth.h
    other/freetype/include/freetype/ftsystem.h
    other/freetype/include/freetype/fttrigon.h
    other/freetype/include/freetype/fttypes.h
    other/freetype/include/freetype/ftwinfnt.h
    other/freetype/include/freetype/ftxf86.h
    other/freetype/include/freetype/t1tables.h
    other/freetype/include/freetype/ttnameid.h
    other/freetype/include/freetype/tttables.h
    other/freetype/include/freetype/tttags.h
    other/freetype/include/freetype/ttunpat.h
    other/freetype/include/ft2build.h
    other/sdl/include/begin_code.h
    other/sdl/include/close_code.h
    other/sdl/include/SDL.h
    other/sdl/include/SDL_active.h
    other/sdl/include/SDL_audio.h
    other/sdl/include/SDL_byteorder.h
    other/sdl/include/SDL_cdrom.h
    other/sdl/include/SDL_config.h
    other/sdl/include/SDL_config_amiga.h
    other/sdl/include/SDL_config_dreamcast.h
    other/sdl/include/SDL_config_macos.h
    other/sdl/include/SDL_config_macosx.h
    other/sdl/include/SDL_config_minimal.h
    other/sdl/include/SDL_config_nds.h
    other/sdl/include/SDL_config_os2.h
    other/sdl/include/SDL_config_symbian.h
    other/sdl/include/SDL_config_win32.h
    other/sdl/include/SDL_copying.h
    other/sdl/include/SDL_cpuinfo.h
    other/sdl/include/SDL_endian.h
    other/sdl/include/SDL_error.h
    other/sdl/include/SDL_events.h
    other/sdl/include/SDL_getenv.h
    other/sdl/include/SDL_joystick.h
    other/sdl/include/SDL_keyboard.h
    other/sdl/include/SDL_keysym.h
    other/sdl/include/SDL_loadso.h
    other/sdl/include/SDL_main.h
    other/sdl/include/SDL_mouse.h
    other/sdl/include/SDL_mutex.h
    other/sdl/include/SDL_name.h
    other/sdl/include/SDL_opengl.h
    other/sdl/include/SDL_platform.h
    other/sdl/include/SDL_quit.h
    other/sdl/include/SDL_rwops.h
    other/sdl/include/SDL_stdinc.h
    other/sdl/include/SDL_syswm.h
    other/sdl/include/SDL_thread.h
    other/sdl/include/SDL_timer.h
    other/sdl/include/SDL_types.h
    other/sdl/include/SDL_version.h
    other/sdl/include/SDL_video.h
    scripts/SDL_keysym.h
    src/base/tl/algorithm.h
    src/base/tl/allocator.h
    src/base/tl/array.h
    src/base/tl/base.h
    src/base/tl/range.h
    src/base/tl/sorted_array.h
    src/base/tl/string.h
    src/base/tl/threading.h
    src/base/detect.h
    src/base/math.h
    src/base/system.c
    src/base/system.h
    src/base/vmath.h
    src/engine/client/backend_sdl.cpp
    src/engine/client/backend_sdl.h
    src/engine/client/client.cpp
    src/engine/client/client.h
    src/engine/client/friends.cpp
    src/engine/client/friends.h
    src/engine/client/graphics.cpp
    src/engine/client/graphics.h
    src/engine/client/graphics_threaded.cpp
    src/engine/client/graphics_threaded.h
    src/engine/client/input.cpp
    src/engine/client/input.h
    src/engine/client/keynames.h
    src/engine/client/serverbrowser.cpp
    src/engine/client/serverbrowser.h
    src/engine/client/sound.cpp
    src/engine/client/sound.h
    src/engine/client/text.cpp
    src/engine/external/pnglite/pnglite.c
    src/engine/external/pnglite/pnglite.h
    src/engine/external/wavpack/bits.c
    src/engine/external/wavpack/float.c
    src/engine/external/wavpack/metadata.c
    src/engine/external/wavpack/unpack.c
    src/engine/external/wavpack/wavpack.h
    src/engine/external/wavpack/words.c
    src/engine/external/wavpack/wputils.c
    src/engine/external/zlib/adler32.c
    src/engine/external/zlib/compress.c
    src/engine/external/zlib/crc32.c
    src/engine/external/zlib/crc32.h
    src/engine/external/zlib/deflate.c
    src/engine/external/zlib/deflate.h
    src/engine/external/zlib/infback.c
    src/engine/external/zlib/inffast.c
    src/engine/external/zlib/inffast.h
    src/engine/external/zlib/inffixed.h
    src/engine/external/zlib/inflate.c
    src/engine/external/zlib/inflate.h
    src/engine/external/zlib/inftrees.c
    src/engine/external/zlib/inftrees.h
    src/engine/external/zlib/trees.c
    src/engine/external/zlib/trees.h
    src/engine/external/zlib/uncompr.c
    src/engine/external/zlib/zconf.h
    src/engine/external/zlib/zlib.h
    src/engine/external/zlib/zutil.c
    src/engine/external/zlib/zutil.h
    src/engine/server/register.cpp
    src/engine/server/register.h
    src/engine/server/server.cpp
    src/engine/server/server.h
    src/engine/shared/compression.cpp
    src/engine/shared/compression.h
    src/engine/shared/config.cpp
    src/engine/shared/config.h
    src/engine/shared/config_variables.h
    src/engine/shared/console.cpp
    src/engine/shared/console.h
    src/engine/shared/datafile.cpp
    src/engine/shared/datafile.h
    src/engine/shared/demo.cpp
    src/engine/shared/demo.h
    src/engine/shared/econ.cpp
    src/engine/shared/econ.h
    src/engine/shared/engine.cpp
    src/engine/shared/filecollection.cpp
    src/engine/shared/filecollection.h
    src/engine/shared/huffman.cpp
    src/engine/shared/huffman.h
    src/engine/shared/jobs.cpp
    src/engine/shared/jobs.h
    src/engine/shared/kernel.cpp
    src/engine/shared/linereader.cpp
    src/engine/shared/linereader.h
    src/engine/shared/map.cpp
    src/engine/shared/mapchecker.cpp
    src/engine/shared/mapchecker.h
    src/engine/shared/masterserver.cpp
    src/engine/shared/memheap.cpp
    src/engine/shared/memheap.h
    src/engine/shared/message.h
    src/engine/shared/netban.cpp
    src/engine/shared/netban.h
    src/engine/shared/network.cpp
    src/engine/shared/network.h
    src/engine/shared/network_client.cpp
    src/engine/shared/network_conn.cpp
    src/engine/shared/network_console.cpp
    src/engine/shared/network_console_conn.cpp
    src/engine/shared/network_server.cpp
    src/engine/shared/packer.cpp
    src/engine/shared/packer.h
    src/engine/shared/protocol.h
    src/engine/shared/ringbuffer.cpp
    src/engine/shared/ringbuffer.h
    src/engine/shared/snapshot.cpp
    src/engine/shared/snapshot.h
    src/engine/shared/storage.cpp
    src/engine/client.h
    src/engine/config.h
    src/engine/console.h
    src/engine/demo.h
    src/engine/editor.h
    src/engine/engine.h
    src/engine/friends.h
    src/engine/graphics.h
    src/engine/input.h
    src/engine/kernel.h
    src/engine/keys.h
    src/engine/map.h
    src/engine/masterserver.h
    src/engine/message.h
    src/engine/server.h
    src/engine/serverbrowser.h
    src/engine/sound.h
    src/engine/storage.h
    src/engine/textrender.h
    src/game/client/components/binds.cpp
    src/game/client/components/binds.h
    src/game/client/components/broadcast.cpp
    src/game/client/components/broadcast.h
    src/game/client/components/camera.cpp
    src/game/client/components/camera.h
    src/game/client/components/chat.cpp
    src/game/client/components/chat.h
    src/game/client/components/console.cpp
    src/game/client/components/console.h
    src/game/client/components/controls.cpp
    src/game/client/components/controls.h
    src/game/client/components/countryflags.cpp
    src/game/client/components/countryflags.h
    src/game/client/components/damageind.cpp
    src/game/client/components/damageind.h
    src/game/client/components/debughud.cpp
    src/game/client/components/debughud.h
    src/game/client/components/effects.cpp
    src/game/client/components/effects.h
    src/game/client/components/emoticon.cpp
    src/game/client/components/emoticon.h
    src/game/client/components/flow.cpp
    src/game/client/components/flow.h
    src/game/client/components/hud.cpp
    src/game/client/components/hud.h
    src/game/client/components/items.cpp
    src/game/client/components/items.h
    src/game/client/components/killmessages.cpp
    src/game/client/components/killmessages.h
    src/game/client/components/mapimages.cpp
    src/game/client/components/mapimages.h
    src/game/client/components/maplayers.cpp
    src/game/client/components/maplayers.h
    src/game/client/components/menus.cpp
    src/game/client/components/menus.h
    src/game/client/components/menus_browser.cpp
    src/game/client/components/menus_demo.cpp
    src/game/client/components/menus_ingame.cpp
    src/game/client/components/menus_settings.cpp
    src/game/client/components/motd.cpp
    src/game/client/components/motd.h
    src/game/client/components/nameplates.cpp
    src/game/client/components/nameplates.h
    src/game/client/components/particles.cpp
    src/game/client/components/particles.h
    src/game/client/components/players.cpp
    src/game/client/components/players.h
    src/game/client/components/scoreboard.cpp
    src/game/client/components/scoreboard.h
    src/game/client/components/skins.cpp
    src/game/client/components/skins.h
    src/game/client/components/sounds.cpp
    src/game/client/components/sounds.h
    src/game/client/components/spectator.cpp
    src/game/client/components/spectator.h
    src/game/client/components/voting.cpp
    src/game/client/components/voting.h
    src/game/client/animstate.cpp
    src/game/client/animstate.h
    src/game/client/component.h
    src/game/client/gameclient.cpp
    src/game/client/gameclient.h
    src/game/client/lineinput.cpp
    src/game/client/lineinput.h
    src/game/client/render.cpp
    src/game/client/render.h
    src/game/client/render_map.cpp
    src/game/client/ui.cpp
    src/game/client/ui.h
    src/game/editor/auto_map.cpp
    src/game/editor/auto_map.h
    src/game/editor/editor.cpp
    src/game/editor/editor.h
    src/game/editor/io.cpp
    src/game/editor/layer_game.cpp
    src/game/editor/layer_quads.cpp
    src/game/editor/layer_tiles.cpp
    src/game/editor/popups.cpp
    src/game/generated/client_data.cpp
    src/game/generated/client_data.h
    src/game/generated/nethash.cpp
    src/game/generated/protocol.cpp
    src/game/generated/protocol.h
    src/game/generated/server_data.cpp
    src/game/generated/server_data.h
    src/game/server/entities/character.cpp
    src/game/server/entities/character.h
    src/game/server/entities/flag.cpp
    src/game/server/entities/flag.h
    src/game/server/entities/laser.cpp
    src/game/server/entities/laser.h
    src/game/server/entities/pickup.cpp
    src/game/server/entities/pickup.h
    src/game/server/entities/projectile.cpp
    src/game/server/entities/projectile.h
    src/game/server/gamemodes/ctf.cpp
    src/game/server/gamemodes/ctf.h
    src/game/server/gamemodes/dm.cpp
    src/game/server/gamemodes/dm.h
    src/game/server/gamemodes/mod.cpp
    src/game/server/gamemodes/mod.h
    src/game/server/gamemodes/tdm.cpp
    src/game/server/gamemodes/tdm.h
    src/game/server/entity.cpp
    src/game/server/entity.h
    src/game/server/eventhandler.cpp
    src/game/server/eventhandler.h
    src/game/server/gamecontext.cpp
    src/game/server/gamecontext.h
    src/game/server/gamecontroller.cpp
    src/game/server/gamecontroller.h
    src/game/server/gameworld.cpp
    src/game/server/gameworld.h
    src/game/server/player.cpp
    src/game/server/player.h
    src/game/collision.cpp
    src/game/collision.h
    src/game/gamecore.cpp
    src/game/gamecore.h
    src/game/layers.cpp
    src/game/layers.h
    src/game/localization.cpp
    src/game/localization.h
    src/game/mapitems.h
    src/game/tuning.h
    src/game/variables.h
    src/game/version.h
    src/game/voting.h
    src/mastersrv/mastersrv.cpp
    src/mastersrv/mastersrv.h
    src/osxlaunch/client.h
    src/tools/crapnet.cpp
    src/tools/dilate.cpp
    src/tools/fake_server.cpp
    src/tools/map_resave.cpp
    src/tools/map_version.cpp
    src/tools/packetgen.cpp
    src/tools/tileset_borderadd.cpp
    src/tools/tileset_borderfix.cpp
    src/tools/tileset_borderrem.cpp
    src/tools/tileset_borderset.cpp
    src/versionsrv/mapversions.h
    src/versionsrv/versionsrv.cpp
    src/versionsrv/versionsrv.h)

add_executable(weetorlds ${SOURCE_FILES})